# FastApi-LangGraph

./: main.py  pyproject.toml
api/v1/: api.py  auth.py  chatbot.py
core/: config.py  limiter.py  limitter.py  logging.py  metrics.py  middleware.py
core/langgraph/: graph.py
core/langgraph/tools/: __init__.py  duckduckgo_search.py
core/prompts/: __init__.py
logs/: development-2025-05-26.jsonl
models/: base.py  databse.py  session.py  thread.py  user.py
schemas/: auth.py  chat.py  graph.py
services/: database.py
utils/: auth.py  graph.py  sanitization.py
